Tests/Examples/bad/parse/return.lifp
// (return Element)

(return)
(return too much)
